class Issue < ApplicationRecord
  belongs_to :magazine
end
