erDiagram
    USERS o{--o{ FOLLOWERS : "has many followers"
    FOLLOWERS o{--o{ USERS : "has many followees"
    USERS ||--o{ PURCHASES : "has many purchases"
    USERS ||--o{ FAVOURITES : "has many favourites"
    USERS ||--o{ PROJECTS : "has many projects"
    USERS ||--o{ PATTERNS : "has many patterns"
    USERS ||--o{ YARNS : "has many yarns"
    USERS ||--o{ MAGAZINES : "has many magazines"
    PATTERNS ||--o{ PROJECTS : "is in many projects"
    PATTERNS ||--o{ FAVOURITES : "is favourited in"
    PATTERNS ||--o{ PURCHASES: "is purchased in"
    PATTERNS o{--o{ PATTERN_YARN : "uses"
    PATTERNS ||--o{ CATEGORIES : "is in many categories"
    PATTERNS ||--o{ TAGS : "has many tags"
    PATTERNS ||--o{ NEEDLES : "has many needle sizes"
    PATTERNS ||--o{ HOOKS : "has many hook sizes"
    YARNS o{--o{ PATTERN_YARN : "is used in"
    YARNS o{--o{ PROJECT_YARN : "is used in"
    YARNS||--o{ FAVOURITES : "is favourited in"
    YARNS ||--|| WEIGHTS : "has a weight"
    YARNS ||--o{ NEEDLES : "has many needle sizes"
    YARNS ||--o{ HOOKS : "has many hook sizes"
    PROJECTS o{--o{ PROJECT_YARN : "uses"
    PROJECTS ||--o{ FAVOURITES : "is favourited in"
    PROJECTS ||--o{ CATEGORIES : "is in many categories"
    PROJECTS ||--o{ TAGS : "has many tags"
    PROJECTS ||--o{ NEEDLES : "has many needle sizes"
    PROJECTS ||--o{ HOOKS : "has many hook sizes"
    PATTERNS o{--o{ MAGAZINES : "is in many magazines"
    MAGAZINES o{--o{ PATTERNS : "has many patterns"
    MAGAZINES ||--o{ USERS : "has many designers"
    MAGAZINES ||--o{ ISSUES : "has many issues"
